#98 Series page refactor

--- a/EventManager.Client/Pages/SL/EpisodeDataPage.razor
+++ b/EventManager.Client/Pages/SL/EpisodeDataPage.razor
@@ -34,7 +34,7 @@
                 </div>
             }
 
-            @if (Episode != null && Episode.IsMine)
+            @if (Episode is {IsMine: true })
             {
                 @if (Episode.IsSeen)
                 {
