--- a/EventManager.Client/Shared/Components/SL/MovieCommentComponent.razor.scss
+++ b/EventManager.Client/Shared/Components/SL/MovieCommentComponent.razor.scss
@@ -1,8 +1,8 @@
 ﻿@import "../../../Styles/_common.scss";
 
 .comment {
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+    margin-bottom: .6rem;
+    margin-top: .6rem;
     border-bottom: $primary-secondary-trans 3px solid;
     border-radius: $border-radius;
     padding: 0.5rem;
