--- a/EventManager.Client/Shared/Components/SL/SeasonEditorComponent.razor
+++ b/EventManager.Client/Shared/Components/SL/SeasonEditorComponent.razor
@@ -34,6 +34,7 @@
                     @if (CanAddOrEdit)
                     {
                         <MudIconButton Icon="@Icons.Filled.Add" OnClick="AddIncrementedEpisode" Color="Color.Primary"/>
+                        <MudIconButton Icon="@Icons.Filled.AddBox" OnClick="AddMultipleIncrementedEpisode" Color="Color.Secondary" />
                     }
                     @if (SeriesIsMine)
                     {
