--- a/EventManager.Client/Shared/Navigators/MainNavigator.razor
+++ b/EventManager.Client/Shared/Navigators/MainNavigator.razor
@@ -36,7 +36,7 @@
                         <MudNavGroup Title="Movies">
                             <MudNavLink Href="/movies">List</MudNavLink>
                             <MudNavLink Href="/my-movies">My List</MudNavLink>
-                            <MudNavLink Href="/">Categories</MudNavLink>
+                            <MudNavLink Href="/movie-categories">Categories</MudNavLink>
                         </MudNavGroup>
                         <MudNavGroup Title="Books">
                             <MudNavLink Href="/books">List</MudNavLink>
@@ -45,7 +45,7 @@
                         <MudNavGroup Title="Series">
                             <MudNavLink Href="/series">List</MudNavLink>
                             <MudNavLink Href="/my-series">My List</MudNavLink>
-                            <MudNavLink Href="/">Categories</MudNavLink>
+                            <MudNavLink Href="/series-categories">Categories</MudNavLink>
                         </MudNavGroup>
                     </MudNavGroup>
                 </Authorized>
