--- a/EventManager.Client/Pages/CSM/CsomorListPage.razor
+++ b/EventManager.Client/Pages/CSM/CsomorListPage.razor
@@ -1,7 +1,7 @@
 @page "/csomors"
 
 <div class="csomor-list w-100">
-    <h1 class="em-page-title">Generators</h1>
+    <div class="em-page-title">Generators</div>
     <div class="action-bar">
         <MudIconButton Color="Color.Primary" Icon="@Icons.Filled.Add" OnClick="@(() => Navigation.NavigateTo("/csomor"))" Disabled="!IsLoggedIn"/>
     </div>
