--- a/EventManager.Client/Shared/Components/CSM/CsomorShareComponent.razor
+++ b/EventManager.Client/Shared/Components/CSM/CsomorShareComponent.razor
@@ -1,13 +1,14 @@
 ﻿<div class="shared-list">
     <div>
-        <div class="em-section-title">Sharing</div>
         <div>
-            <MudTextField Value="Name" TextChanged="RefreshCorrectPersons" Label="Search" Variant="Variant.Outlined" />
+            <MudTextField Value="Name" TextChanged="RefreshCorrectPersons" Label="Search" Variant="Variant.Outlined"/>
         </div>
         @foreach (var person in CorrectList)
         {
             <div class="correct-person" @onclick="@(() => AddPerson(person.Id))">
-                <div class="data-row"><strong>Name: </strong> @person.Username</div>
+                <div class="data-row">
+                    <strong>Name: </strong> @person.Username
+                </div>
             </div>
         }
     </div>
@@ -16,10 +17,14 @@
         {
             <div class="shared-person">
                 <div class="data-row"><strong>Name: </strong> @person.UserName - @(string.IsNullOrEmpty(person.FullName) ? person.Email : person.FullName)</div>
-                <div class="data-row access" @onclick="@(() => ChangeAccess(person.Id))"><strong>Access Type: </strong>@(person.HasWriteAccess ? "Write" : "Read")</div>
-                <div class="data-row"><strong>Added On: </strong>@ManagerAPI.Shared.Helpers.DateHelper.DateToString(person.SharedOn)</div>
+                <div class="data-row access" @onclick="@(() => ChangeAccess(person.Id))">
+                    <strong>Access Type: </strong>@(person.HasWriteAccess ? "Write" : "Read")
+                </div>
+                <div class="data-row">
+                    <strong>Added On: </strong>@ManagerAPI.Shared.Helpers.DateHelper.DateToString(person.SharedOn)
+                </div>
                 <div>
-                    <MudIconButton Color="Color.Primary" Icon="@Icons.Filled.Remove" OnClick="@(() => RemovePerson(person.Id))" />
+                    <MudIconButton Color="Color.Primary" Icon="@Icons.Filled.Remove" OnClick="@(() => RemovePerson(person.Id))"/>
                 </div>
             </div>
         }
