--- a/EventManager.Client/Pages/Profiles/MyProfilePage.razor
+++ b/EventManager.Client/Pages/Profiles/MyProfilePage.razor
@@ -11,14 +11,14 @@
     }
     else
     {
-        @if (User != null)
+        @if (User is not null)
         {
             <h1 class="em-page-title">My Profile - @User.UserName</h1>
 
             <div class="row col col-12">
-        <div class="col col-12 col-md-6 p-2">
-            <div class="my-profile-picture">
-                @if (User.ProfileImageData.Length == 0)
+                <div class="col col-12 col-md-6 p-2">
+                    <div class="my-profile-picture">
+                        @if (User.ProfileImageData.Length == 0)
                         {
                             <img src="/images/profile-icon.jpg" alt="@User.UserName" />
                         }
@@ -32,55 +32,49 @@
                         <div class="row col col-12">
                             <div class="col col-6 p-1">
                                 <MudDatePicker Class="w-100" @bind-Date="User.LastLogin" Editable="false"
-                            InputVariant="Variant.Outlined" Label="Last Login" DateFormat="yyyy-MM-dd HH:mm:ss"
-                            Disabled="true" />
+                                       InputVariant="Variant.Outlined" Label="Last Login" DateFormat="yyyy-MM-dd HH:mm:ss"
+                                       Disabled="true" />
                             </div>
                             <div class="col col-6 p-1">
                                 <MudDatePicker Class="w-100" @bind-Date="User.RegistrationDate" Editable="false"
-                            InputVariant="Variant.Outlined" Label="Registration Date" DateFormat="yyyy-MM-dd HH:mm:ss"
-                            Disabled="true" />
+                                       InputVariant="Variant.Outlined" Label="Registration Date" DateFormat="yyyy-MM-dd HH:mm:ss"
+                                       Disabled="true" />
                             </div>
                         </div>
                         <div class="col col-12 p-1">
                             <MudTextField @bind-Value="Roles" Label="Roles" FullWidth="true" Disabled="true"
-                        Variant="Variant.Outlined" />
+                                  Variant="Variant.Outlined" />
                         </div>
                     </div>
                 </div>
                 <div class="col col-12 col-md-6 p-2">
                     <div class="settings blue-label">
-
-                        <EditForm Model="UserUpdate" OnValidSubmit="UpdateUser">
-                            <DataAnnotationsValidator />
+                        <MudForm @ref="Form">
                             <div class="em-sub-title">Settings</div>
                             <div class="row col col-12">
                                 <div class="col col-6 p-1">
                                     <MudTextField @bind-Value="UserUpdate.FullName" Label="Full Name" FullWidth="true"
-                                Variant="Variant.Outlined" />
-                                    <ValidationMessage For="() => UserUpdate.FullName" />
+                                          Variant="Variant.Outlined" For="() => UserUpdate.FullName" />
                                 </div>
                                 <div class="col col-6 p-1">
                                     <MudDatePicker Class="w-100" @bind-Date="UserUpdate.BirthDay"
-                                InputVariant="Variant.Outlined" Label="Birthday" DateFormat="yyyy-MM-dd" />
-                                    <ValidationMessage For="() => UserUpdate.BirthDay" />
+                                           InputVariant="Variant.Outlined" Label="Birthday" DateFormat="yyyy-MM-dd" For="() => UserUpdate.BirthDay" />
                                 </div>
                             </div>
                             <div class="col col-12 p-1">
-                                <MudTextField InputType="InputType.Email" @bind-Value="UserUpdate.Email" Label="E-mail"
-                            FullWidth="true" Variant="Variant.Outlined" />
-                                <ValidationMessage For="() => UserUpdate.Email" />
+                                <MudTextField InputType="InputType.Email" @bind-Value="UserUpdate.Email" Required="true" Label="E-mail"
+                                      FullWidth="true" Variant="Variant.Outlined" For="() => UserUpdate.Email" />
                             </div>
                             <div class="row col col-12">
                                 <div class="col col-6 p-1">
                                     <MudTextField @bind-Value="UserUpdate.PhoneNumber" Label="Phone Number" FullWidth="true"
-                                Variant="Variant.Outlined" />
-                                    <ValidationMessage For="() => UserUpdate.PhoneNumber" />
+                                          Variant="Variant.Outlined" For="() => UserUpdate.PhoneNumber" />
                                 </div>
                                 @if (Genders != null)
                                 {
                                     <div class="col col-6 p-1">
                                         <MudSelect T="int?" @bind-Value="UserUpdate.GenderId" Label="Gender" FullWidth="true"
-                                Variant="Variant.Outlined">
+                                       Variant="Variant.Outlined" For="() => UserUpdate.GenderId">
                                             <MudSelectItem T="int?" Value="null">-</MudSelectItem>
                                             @foreach (var i in Genders)
                                             {
@@ -92,43 +86,39 @@
                             </div>
                             <div class="col col-12 p-1">
                                 <MudTextField InputType="InputType.Email" @bind-Value="UserUpdate.SecondaryEmail"
-                            Label="Secondary E-mail" FullWidth="true" Variant="Variant.Outlined" />
-                                <ValidationMessage For="() => UserUpdate.SecondaryEmail" />
+                                      Label="Secondary E-mail" FullWidth="true" Variant="Variant.Outlined" For="() => UserUpdate.SecondaryEmail" />
                             </div>
                             <div class="row col col-12">
                                 <div class="col col-6 p-1">
                                     <MudTextField @bind-Value="UserUpdate.TShirtSize" Label="TShirt Size" FullWidth="true"
-                                Variant="Variant.Outlined" />
-                                    <ValidationMessage For="() => UserUpdate.TShirtSize" />
+                                          Variant="Variant.Outlined" For="() => UserUpdate.TShirtSize" />
                                 </div>
                                 <div class="col col-6 p-1">
                                     <MudTextField @bind-Value="UserUpdate.Group" Label="Group" FullWidth="true"
-                                Variant="Variant.Outlined" />
-                                    <ValidationMessage For="() => UserUpdate.Group" />
+                                          Variant="Variant.Outlined" For="() => UserUpdate.Group" />
                                 </div>
                             </div>
                             <div class="col col-12 p-1">
                                 <MudTextField @bind-Value="UserUpdate.Allergy" Label="Allergy" FullWidth="true"
-                            Variant="Variant.Outlined" Lines="3" />
-                                <ValidationMessage For="() => UserUpdate.Allergy" />
+                                      Variant="Variant.Outlined" Lines="3" For="() => UserUpdate.Allergy" />
                             </div>
                             <div class="row col col-12">
                                 <div class="col col-6 p-1">
                                     <MudTextField @bind-Value="UserUpdate.Country" Label="Country" FullWidth="true"
-                                Variant="Variant.Outlined" />
-                                    <ValidationMessage For="() => UserUpdate.Country" />
+                                          Variant="Variant.Outlined" For="() => UserUpdate.Country" />
                                 </div>
                                 <div class="col col-6 p-1">
                                     <MudTextField @bind-Value="UserUpdate.City" Label="City" FullWidth="true"
-                                Variant="Variant.Outlined" />
-                                    <ValidationMessage For="() => UserUpdate.City" />
+                                          Variant="Variant.Outlined" For="() => UserUpdate.City" />
                                 </div>
                             </div>
                             <div class="text-right pt-3 pr-3 pb-1">
-                                <MudButton Variant="Variant.Filled" ButtonType="ButtonType.Submit" Color="Color.Primary">Save
-                                    Settings</MudButton>
+                                <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="Submit">
+                                    Save
+                                    Settings
+                                </MudButton>
                             </div>
-                        </EditForm>
+                        </MudForm>
                     </div>
 
                     <div class="danger-zone">
@@ -137,25 +127,27 @@
                             <div class="col col-12 col-sm-12 col-md-6">
                                 <div class="text-center">
                                     <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="OpenChangePasswordDialog">
-                                        Change Password</MudButton>
+                                        Change Password
+                                    </MudButton>
                                 </div>
                             </div>
                             <div class="col col-12 col-sm-12 col-md-6">
                                 <div class="text-center">
                                     <MudButton Variant="Variant.Text" Color="Color.Primary"
-                                OnClick="OpenUploadProfileImageDialog">Change Profile Image</MudButton>
+                                       OnClick="OpenUploadProfileImageDialog">Change Profile Image</MudButton>
                                 </div>
                             </div>
                             <div class="col col-12 col-sm-12 col-md-6">
                                 <div class="text-center">
                                     <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="OpenChangeUsernameDialog">
-                                        Change Username</MudButton>
+                                        Change Username
+                                    </MudButton>
                                 </div>
                             </div>
                             <div class="col col-12 col-sm-12 col-md-6">
                                 <div class="text-center danger">
                                     <MudButton Variant="Variant.Text" Color="Color.Primary"
-                                OnClick="OpenUserDisableConfirmDialog">Disable User</MudButton>
+                                       OnClick="OpenUserDisableConfirmDialog">Disable User</MudButton>
                                 </div>
                             </div>
                         </div>
